--- a/task04/login.html
+++ b/task04/login.html
@@ -10,15 +10,16 @@
 <header>
     <a href="" class="head-left">注册</a>
     <a href="" class="head-right">关闭</a>
-    <h2>登录</h2>
+    <h2>登陆</h2>
 </header>
 <div class="content">
     <form class="login">
-        <div class="tel"><input class="tel01" type="text" placeholder="请输入手机号"/></div>
-        <div class="pwd"><input class="pwd01" type="password" placeholder="请输入密码"/></div>
-        <input class="btn" type="button" value="登录">
-        <a class="forget" href="">忘记密码</a>
+        <div class="tel"><span>|</span><input class="tel01" type="text" placeholder="请输入手机号"/></div>
+        <div class="pwd"><span>|</span><input class="pwd01" type="password" placeholder="请输入密码"/></div>
+        <input class="btn" type="button" value="登陆">
+        <a class="forget" href="">忘记密码?</a>
     </form>
 </div>
 </body>
 </html>
+
